Changelog
=========

1.6.9 (unreleased)
------------------

- Nothing changed yet.


1.6.8 (2015-06-03)
------------------

- Implement late autosigning when VMs are brought up with race conditions.


1.6.7 (2015-06-02)
------------------

- Delete non-existent Ceph pools if they contain no images (#14997).
- Remove now outdated Qemu/KVM management code as this has all moved
  to fc.qemu.

1.6.6 (2015-04-10)
------------------

- Remove explicit nagios notification for technical contacts. (#14900)
- Fix spurious bug in update-iptables invocation.


1.6.5 (2015-03-20)
------------------

- Ignore missing pools when deleting volumes. (#14947)


1.6.4 (2015-03-13)
------------------

- Improve node deletion: delete snapshots of VM images, too. (#14894)


1.6.3 (2015-03-05)
------------------

- Improve node deletion: delete bacula config snippets, too.


1.6.2 (2015-03-02)
------------------

- Add "postpone" maintenance script status (#13755).
- Remove obsolete "redundancy_groups" action.


1.6.1 (2015-02-09)
------------------

- Fix bug for puppet master deactivation.


1.6 (2015-02-05)
----------------

- Use new deletions API to clean up VM data on puppetmaster, KVM hosts,
  Ceph, Bacula, and Nagios.

- Fix bogus ProcessLookupError except clause.


1.5.4 (2014-12-12)
------------------

- Fix bug which caused disk grow to fail during the first attempt (#13930).
- Improve iptables reloading (#13879).


1.5.3 (2014-11-22)
------------------

- Refactored resize2fs disk grow code (#13414).
- Delete expired snapshots which adhere to the '*-keep-until-*' naming
  convention (#13414).
- Remove old KVM configure code. The code lives now in the fc.qemu package
  (#13414).


1.5.2 (2014-10-01)
------------------

- Revive localconfig-resize2fs-root: this is not obsolete but necessary for
  disk grow.

- Exclude users from duplicate contact detection in case they have no email
  address.


1.5.1 (2014-10-01)
------------------
